Improve notebook widget tab alignment fix

--- a/resources/css/lcg-widgets.css
+++ b/resources/css/lcg-widgets.css
@@ -64,26 +64,27 @@
 
 .notebook-widget ul.notebook-switcher {
     margin: 1.6em 0 1em 0;
-    padding: 3px 0 2px 0;
+    padding: 0;
     border-bottom: solid #777 1px;
 }
 .notebook-widget li.notebook-tab {
     display: inline;
-    white-space: nowrap;
-    margin-left: 4px;
-    font-size: 16px;
-    font-weight: bold;
+    margin: 0 0 0 4px;
+    padding: 0;
 }
 .notebook-widget li.notebook-tab a {
+    display: inline-block;
     position: relative;
     top: 1px;
     border-radius: 4px 4px 0 0;
     border: solid #777 1px;
     padding: 3px 12px 2px 12px;
     background-color: #ddd;
-    text-decoration: none;
-    height: 18px;
     color: #000;
+    font-size: 16px;
+    font-weight: bold;
+    white-space: nowrap;
+    text-decoration: none;
 }
 .notebook-widget li.notebook-tab a.current {
     background-color: #fff;
